--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-numpy==1.17.3
-opencv-python==4.4.0.42
-PyWavelets==1.0.3
+numpy==1.19.1
+opencv-python-headless==4.4.0.42
+PyWavelets==1.1.1
+pyzxing==0.3.1.1
